Trying to fix problem where x axis not showing up

--- a/main.css
+++ b/main.css
@@ -5,3 +5,8 @@
 }
 
 /* ------------------------------------------------------------------------------------------------------------------------- */
+
+.svg {
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
